# RoomWithAVue

./: README.md
01-Intro/: app.js  index.html  styles.css
02-TheBasics/: app.js  index.html  styles.css
03-ConditionalContent/: app.js  index.html  styles.css
04-Project-Game/: app.js  index.html  styles.css
04-ProjectGame/: app.js  index.html  styles.css
05-LifeCycles/: app.js  index.html  styles.css
06-Components/: README.md  index.html  package-lock.json  package.json  vite.config.ts
06-Components/src/: App.vue  main.ts  styles.css  styles.variables.css
06-Components/src/api/: users.ts
06-Components/src/components/: AddUser.vue  AppHeader.vue  AppNavBar.vue  DemoCompositionAPI.vue  ExampleComponent.vue  NavBar.vue  UserDetails.vue  UserItem.vue  UserList.vue
06-Components/src/data/: entries.ts
06-Components/src/models/: Entry.ts  User.ts
07-Router&Transitions/: .gitignore  README.md  index.html  package-lock.json  package.json
07-Router&Transitions/src/: App.vue  styles.colors.css  styles.css
07-Router&Transitions/src/layouts/: AppHeader.vue  SettingsSidebar.vue
07-Router&Transitions/src/pages/: AnimationsPage.vue  RouterChildDefaultPage.vue  RouterChildParallelPage.vue  RouterPage.vue
07-Router&Transitions/src/router/: index.ts
07-RouterAnimationsPinia/: index.html
07-RouterAnimationsPinia/src/: App.vue  main.ts  styles.css
PythonServer/: .gitignore  README.md  app.py  pyproject.toml
PythonServer/src/: __init__.py
PythonServer/src/routes/: route.py  user.py
PythonServer/src/utils/: data_generator.py
(+62 files in other folders)
