[project]
name = "server"
version = "0.1.0"
description = "basic python app to serve with Vue"
authors = [
    {name = "thegroosalugg"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]

[tool.poetry]
packages = []
package-mode = false # configures python as API instead of Distributable Package

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
